# e2e4

./: .clang-format  BACKLOG.md  CMakeLists.txt  test01.json
.github/workflows/: cmake.yml
boards/: 3-figures.txt
include/: arena.h  board.h  board_json.h  board_repr.h  char_slice.h  chars.h  func.h  http.h  jsmn.h  json.h  json_reader.h  json_writer.h  move_slice.h
include/e2/: board.h
include/u/: arena.h  func.h  slice.h
src/: arena.c  board.c  board_json.c  board_repr.c  char_slice.c  chars.c  http.c  json.c  json_reader.c  json_writer.c  jsw.c  main_cli.c  move_slice.c  server_cli.c
src/e2/: board.c
src/u/: arena.c  slice.c
tests/: arena_test.c  board_test.c  char_slice_test.c  chars_test.c  e2_board_test.c  http_test.c  json_test.c  u_arena_test.c  u_slice_test.c
